--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,25 @@
 asgiref==3.8.1
-channels==4.1.0
+certifi==2024.6.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+cryptography==42.0.8
 distlib==0.3.8
+dj-rest-auth==6.0.0
 Django==5.0.6
-django-cors-headers==4.3.1
-django-jazzmin==3.0.0
-django-tinymce==4.0.0
+django-allauth==0.63.3
 djangorestframework==3.15.1
-djangorestframework-simplejwt==5.3.1
 filelock==3.14.0
 gunicorn==22.0.0
-mysqlclient==2.2.4
+idna==3.7
 packaging==24.0
 pillow==10.3.0
 platformdirs==4.2.2
+pycparser==2.22
 PyJWT==2.8.0
-PyMySQL==1.1.1
+requests==2.32.3
 sqlparse==0.5.0
 tzdata==2024.1
+urllib3==2.2.2
+vercel==0.2.1
 virtualenv==20.26.2
 whitenoise==6.6.0
